<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">InventoryApp</string>

    <string name="response_string">Entity created. Id: <xliff:g name="id">%d</xliff:g>,
        productName<xliff:g name="product_name">%s</xliff:g></string>
    <string name="response_error_message">Insert was unsuccessful due to following
        errors:<xliff:g name="error">%s</xliff:g></string>
    <string name="create_dummy_product">Create dummy Product</string>

    <!-- Error message string keys -->
    <string name="error_result_ok_key" translatable="false">0</string>

    <!-- Error message string values-->
    <string name="error_no_supplier_selected_key" translatable="false">-7</string>

    <!-- Error message string values-->
    <string name="error_result_ok_value">OK</string>
    <string name="error_db_write_error_value">Database write error.</string>
    <string name="error_product_name_empty_value">The product name must not be empty.</string>
    <string name="error_supplier_name_empty_value">The supplier name must not be empty.</string>
    <string name="error_supplier_phone_empty_value">The supplier phone number must not be empty.</string>
    <string name="error_unknown_error_value">Unknown error.</string>
    <string name="error_no_results_value">There are no valid results.</string>
    <string name="error_no_supplier_selected_value">No supplier selected.</string>

    <!-- Error message parts -->
    <string name="first_error_code">Error code:</string>
    <string name="following_error_codes">, error code:</string>
    <string name="activity_label_product_list">Product List</string>

    <!-- edit item menu items -->
    <string name="save_menu_item">Save</string>
    <string name="delete_menu_item">Delete this item...</string>

    <!-- main menu items -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- product details strings -->
    <string name="product_details_label">Product Details</string>
    <string name="product_details_edit_product">Edit product</string>
    <string name="product_details_delete_product">Delete product</string>
    <string name="product_details_price_text">Price:</string>
    <string name="product_details_price"><xliff:g name="price">%d</xliff:g> €</string>
    <string name="product_details_quantity_text">Quantity:</string>
    <string name="product_details_quantity"><xliff:g name="quantity">%d</xliff:g> pcs</string>
    <string name="product_details_quantity_one_item">1 piece</string>
    <string name="product_details_supplier_text">Supplier:</string>
    <string name="product_details_supplier_name_sample">Supplier sample</string>
    <string name="product_details_supplier_phone_text">Supplier phone:</string>
    <string name="product_details_supplier_phone">555-1234-567</string>
    <string name="product_details_product_name">Product name:</string>
    <string name="product_details_no_supplier_set_up_error">No supplier has been set up. We cannot load supplier data!</string>
    <string name="product_details_uri_didnt_set_up_error">Uri must set in order to run this activity</string>
    <string name="product_details_confirm_delete_title">Confirm delete</string>
    <string name="product_details_delete_warning_message">All product data will be deleted! Are you sure?</string>
    <string name="product_details_positive_button">Delete</string>
    <string name="product_details_negative_button">Cancel</string>
    <string name="product_details_delete_unsuccessful_message">Deleting product was unsuccessful!</string>

    <!-- product edit activity strings -->
    <string name="product_edit_no_existing_suppliers">There are no existing Suppliers. Add one before product insertation</string>
    <string name="product_edit_select_supplier">Select Supplier</string>
    <string name="product_edit_not_available">N/A</string>
    <string name="product_edit_edit_product_title">Edit Product</string>
    <string name="product_edit_add_new_product_title">Add new Product</string>
    <string name="product_edit_enter_valid_number">Enter number greater than 0!</string>
    <string name="product_edit_name_cannot_be_empty">Name cannot be empty!</string>
    <string name="product_edit_all_fields_must_set">All fields must be set</string>
    <string name="product_edit_save_was_unsuccessful">Saving product was unsuccessful</string>
    <string name="product_edit_update_unsuccessful">Updating product was unsuccessful</string>
    <string name="product_edit_alert_dialog_title">Exit without save?</string>
    <string name="product_edit_alert_dialog_message">Pressing back button you\'ll exit without saving data? Are you sure?</string>
    <string name="product_edit_alert_dialog_positive_button">Yes, quit!</string>
    <string name="product_edit_alert_dialog_negative_button">No, stay here!</string>
    <string name="product_edit_saved_successfully">Product saved successfully with id: <xliff:g name="save_success">%s</xliff:g></string>
    <string name="product_edit_updated_successfully">Product with id: <xliff:g name="update_success">%s</xliff:g> updated successfully</string>
    <string name="product_edit_supplier_phone">Supplier Phone:</string>
    <string name="product_edit_select_supplier_of_this_product">Select supplier of this product</string>
    <string name="product_edit_initial_quantity">Initial Quantity</string>
    <string name="product_edit_quantity">Quantity</string>
    <string name="product_edit_enter_initial_price">Enter initial price</string>
    <string name="product_edit_price">Price:</string>
    <string name="product_edit_enter_product_name">Enter Product Name</string>
    <string name="product_edit_product_name">Product Name:</string>

    <!-- Supplier list/edit Activity strings -->
    <string name="delete_confirmation_message">Are you sure you want to delete this item? This action also removes products which belongs to this supplier!</string>
    <string name="edit_suppliers_main_menu_item">Suppliers...</string>
    <string name="suppliers_list_title">Suppliers...</string>
    <string name="supplier_edit_edit_title">Edit Supplier</string>
    <string name="supplier_edit_insert_title">Insert new Supplier</string>
    <string name="supplier_edit_confirm_leave_title">Confirm leave</string>
    <string name="supplier_edit_confirm_leave_message">You started to edit Supplier. Leaving this page all data of this supplier will be lost! Continue?</string>
    <string name="supplier_edit_confirm_leave_positive">Yes, exit!</string>
    <string name="supplier_edit_confirm_leave_negative">No, stay here!</string>
    <string name="supplier_edit_error_name_empty">Supplier Name cannot be empty</string>
    <string name="supplier_field_error_phone_empty">Phone number cannot be empty!</string>
    <string name="supplier_edit_delete_confirmation_title">Confirm delete</string>
    <string name="supplier_edit_insert_error">Error adding supplier</string>
    <string name="supplier_edit_unfilled_field_error">All fields must filled out!</string>
    <string name="supplier_edit_update_successful">Supplier with id: <xliff:g name="update_ok">%s</xliff:g> has been modified</string>
    <string name="supplier_edit_update_unsuccessful">Updating supplier was unsuccessful</string>
    <string name="supplier_edit_insert_successful">Supplier with id: <xliff:g name="insert_ok">%s</xliff:g> has been added</string>
    <string name="supplier_edit_supplier_name">Supplier Name:</string>
    <string name="supplier_edit_enter_supplier_name_here">Enter supplier name here</string>
    <string name="supplier_edit_supplier_phone">Supplier Phone</string>
    <string name="supplier_edit_enter_phone_number_here">Enter phone number here</string>

    <!-- Main Activity strings -->
    <string name="main_activity_message_product_list_empty">Your product list is empty. Start with pressing the \'+\' button.</string>
    <string name="main_activity_message_empty_supplier_list">Welcome to InventoryApp. In order to add products you have to add at least Supplier. Press the menu and select \'Suppliers...\' option</string>
    <string name="list_container_the_list_is_empty">The list is empty</string>
    <string name="product_list_item_sell_button">sell</string>

    <!-- inventory provider -->
    <string name="inventory_provider_supplier_deleted">Supplier with id: <xliff:g name="id">%d</xliff:g> has been deleted</string>

</resources>
