<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProductDetailsAcitvity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <!-- product name -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_details_product_name" />

        <TextView
            android:id="@+id/product_details_product_name"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            tools:text="Lorem ipsum" />

        <!-- product price -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_details_price_text" />

        <TextView
            android:id="@+id/product_details_price"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/product_details_price" />

        <!-- product quantity -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_details_quantity_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_details_quantity"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/product_details_quantity" />
            <!-- buttons for increasing and decreasing quantity -->
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center"
                android:id="@+id/product_details_increase_by_one"
                android:src="@drawable/ic_exposure_plus_1"
                android:background="@drawable/increase_background"/>
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:id="@+id/product_details_decrease_by_one"
                android:src="@drawable/ic_exposure_neg_1"
                android:background="@drawable/decrease_background"/>
        </LinearLayout>
        <!-- supplier name -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_details_supplier_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/product_details_suppler"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="6dp"
            tools:text="@string/product_details_supplier_name_sample" />
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_call"
                android:layout_marginRight="16dp"
                android:tint="@android:color/holo_green_dark"
                android:layout_gravity="center"/>
        </LinearLayout>
        <!-- supplier phone -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_details_supplier_phone_text" />

        <TextView
            android:id="@+id/product_details_supplier_phone"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            tools:text="@string/product_details_supplier_phone" />
    </LinearLayout>
</ScrollView>